# sword

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py
buildpy/: __init__.py
include/: compiler-info.h  sword_csv.h  sword_csv_count.h  sword_csv_read.h  sword_io.h
src/: CMakeLists.txt  mainpy.c  sword_csv.c  sword_csv_count.c  sword_csv_read.c  sword_io.c
src/tests/: CMakeLists.txt  sword_csv_count_tests.c  sword_csv_tests.c
